adição do footer

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies AI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <main class="container">
         <div class="content">
             <header>
-                <img src="image/Logo.svg">
+                <a href="index.html"><img src="image/Logo.svg"></a>
                 <a href="https://error-404-seven.vercel.app">
                     <button>Nova recomendação
                         <img src="image/flash.png">
@@ -89,6 +91,12 @@
                 </div>
             </div>
         </div>
+        <div class="rodape">
+            <footer>
+                <p>&copy; Copyright 2023 - Desenvolvido por Douglas Cabral</p>
+            </footer>
+        </div>
     </main>
 </body>
+
 </html>
