link do git hub no footer

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="rodape">
             <footer>
-                <p>&copy; Copyright 2023 - Desenvolvido por Douglas Cabral</p>
+                <p>&copy; Copyright 2023 - Desenvolvido por <a href="https://github.com/loraxexe/">Douglas Cabral</a></p>
             </footer>
         </div>
     </main>
